--- a/css/layout.css
+++ b/css/layout.css
@@ -72,12 +72,48 @@ body > header #signup {
 }
 
 .infoGrid{
+  text-align: left;
+  padding-left: 8em;
+  padding-right: 8em;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto auto auto;
+  grid-gap: 2em;
+}
+
+.infoGrid #information{
+  text-align: left;
+  grid-row: 1;
+  grid-column: 1;
   padding: 1em;
 }
 
-/* Footer Layout */
-body > footer{
+.infoGrid #favPets{
+  text-align: left;
   grid-column: 1;
-  grid-row: 3;
-  align-self: end;
+  grid-row: 2;
+  padding: 1em;
+}
+
+.infoGrid #petsForAdoption{
+  text-align: left;
+  grid-column: 2;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  padding: 1em;
+}
+
+.infoGrid #question{
+  text-align: left;
+  grid-column: 3;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  padding: 1em;
+}
+
+footer{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
 }
