--- a/css/profile.css
+++ b/css/profile.css
@@ -1,4 +1,30 @@
 #owner{
     width: 120em;
     font-family: Arial, Helvetica, sans-serif;
-  }
+}
+  
+.infoGrid #information{
+  border-style: solid;
+  border-width: 2px;
+}
+
+.infoGrid #information p{
+  border-bottom: solid;
+  padding-bottom: 5px;
+  border-width: 1px;
+}
+
+.infoGrid #favPets{
+  border-style: solid;
+  border-width: 2px;
+}
+
+.infoGrid #petsForAdoption{
+  border-style: solid;
+  border-width: 2px;
+}
+
+.infoGrid #question{
+  border-style: solid;
+  border-width: 2px;
+}
