--- a/css/home-page.css
+++ b/css/home-page.css
@@ -1,34 +1,50 @@
 #homepage{
     font-family: Arial, Helvetica, sans-serif;
-    padding-right: 5%;
-    padding-left: 5%;
-    padding-bottom: 1%;
-    padding-top: 1%;
-}
-
-.profileGrid{
- 
+    margin: 0 auto;
     display: grid;
-    grid-template-columns: 2fr 2fr;
-    grid-template-rows: auto;
-    grid-gap: 2em;
+    grid-template-columns: auto auto auto auto;
+    column-gap: 2em;
 }
 
-#profile{
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    grid-gap: 1em;
-    
-	border:#000 2px solid;
-	
+#homepage_profile {
+    position: relative;
+    background-color: red;
+    text-align: center;
+    padding-top: 0em;
 }
 
-#profile .image{
-    padding-top: 0em !important;
-    align-self: center;
+.image {
+    display: block;
 }
 
-#profile .image img{
-    border-radius: 0%;
-    /*border: #000 1px solid;*/
+.overlay {
+    position: absolute;
+    top: 21.5%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 300px;
+    width: 300px;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: black;
+}
+
+#homepage_profile:hover .overlay {
+    opacity: 0.5;
+}
+
+.text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#homepage_profile a{
+    text-decoration: none;
+    font-size: 30px;
+    color: black;
 }
