--- a/css/home-page.css
+++ b/css/home-page.css
@@ -1,40 +1,43 @@
 #homepage{
     font-family: Arial, Helvetica, sans-serif;
-    margin: 0 auto;
     display: grid;
     grid-template-columns: auto auto auto auto;
     column-gap: 2em;
+    position: absolute;
+    top: 20%;
+    left: 17%;
+    margin: -25px 0 0 -25px; /* apply negative top and left margins to truly center the element */
 }
 
 #homepage_profile {
     position: relative;
-    background-color: red;
     text-align: center;
-    padding-top: 0em;
 }
 
-.image {
+#homepage_profile .image {
     display: block;
+    padding-top: 0;
 }
 
 .overlay {
     position: absolute;
-    top: 21.5%;
+    top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     height: 300px;
     width: 300px;
     opacity: 0;
-    transition: .5s ease;
+    transition: .5s ease-out;
     background-color: black;
 }
 
-#homepage_profile:hover .overlay {
-    opacity: 0.5;
+.overlay:hover {
+    opacity: 0.7;
 }
 
 .text {
+    width: 300px;
     color: white;
     font-size: 20px;
     position: absolute;
@@ -47,4 +50,14 @@
     text-decoration: none;
     font-size: 30px;
     color: black;
+}
+
+#homepage_profile a:hover{
+    animation: pink_and_blue 3s infinite;
+}
+
+@keyframes pink_and_blue {
+  0%   {color: rgb(230, 103, 124);}
+  50%  {color: rgb(19, 77, 165);}
+  100%  {color: rgb(230, 103, 124);}
 }
