--- a/css/header.css
+++ b/css/header.css
@@ -1,65 +1,81 @@
-/* header */
-body > header {
-    background-color: #ACB0C0;
-    color: white;
-    padding: 1em;
-    padding-left: 2em;
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  }
-  
-  body > header h1, body > header h2{
-    font-style: italic;
-    margin: 0;
-  }
-  
-  body > header h2{
-    font-size: 0.8em;
-  }
-  
-  body > header a {
-    color: white;
-    text-decoration: none;
-  }
-  
-  body > header #search{
-    padding-right: 9em;
-    padding-top: 0.5em;
-  }
-  
-  body > header #search input[type=text] {
-    padding: 7px;
-    border: none;
-    font-size: 17px;
-  }
-  
-  body > header #search button {
-    float: right;
-    padding: 7px;
-    background: white;
-    color: #ACB0C0;
-    font-size: 17px;
-    border: none;/* Prevent double borders */
-    cursor: pointer;
-  }
-  
-  body > header #name_slogan  {
-    border-right: 2px solid white;
-    padding-bottom: 0;
-    margin-right: 1050px;
-  }
-  
-  body > header #signup{
-    padding-top: 1em;
-  }
-  
-  body > header #signup a:first-child {
-    border-right: 1px solid white;
-  }
-  
-  body > header #signup a {
-    padding: 0 1em;
-  }
-  
-  body > header #signup a:first-child {
-    padding-left: 0;
-  }
+header{
+  background-image: linear-gradient(to bottom right, #326771, #28464B);
+  display: flex;
+  flex-direction: row;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 1em;
+  width: 100%;
+}
+
+header a{
+  text-decoration: none;
+  color: white;
+}
+
+header h1, h2{
+  font-style: italic;
+  margin: 0;
+}
+
+header h2{
+  font-size: small;
+}
+
+header #name_slogan{
+  padding-right: 1em;
+  border-right: 1px solid white;
+}
+
+header #rightside{
+  margin-left: auto;
+}
+
+header #search{
+  margin-right: 3em;
+}
+
+header #settings{
+  margin-left: auto;
+  margin-right: 3em;
+  padding-top: 1em;
+}
+
+header #signedin{
+  position: relative;
+  display: inline-block;
+}
+
+header #dropdown{
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+header #dropdown a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+header #dropdown a:hover {background-color: #f1f1f1;}
+
+header #signedin:hover #dropdown{
+  display: block;
+}
+
+body > header #signup a:first-child {
+  border-right: 1px solid white;
+}
+
+body > header #signup a {
+  padding: 0 1em;
+}
+
+body > header #signup a:first-child {
+  padding-left: 0;
+}
