--- a/css/layout.css
+++ b/css/layout.css
@@ -2,10 +2,14 @@
 body {
   background-color: #edeff0;
   margin: 0 auto;
-  width: 120em;
+  width: 100%;
   display: grid;
   grid-template-columns: [start] 4fr [middle] 1fr [end];
   grid-template-rows: [start] auto [nav] auto [news] 1fr [footer] auto [end];
+}
+
+body::-webkit-scrollbar-track{
+  background: black;
 }
 
 body > header {
@@ -13,36 +17,6 @@ body > header {
 }
 
 
-aside {
-  grid-column: middle;
-  grid-row: nav / end;
-}
-
-/* header layout */
-body > header {
-  display: grid;
-  grid-template-columns: 1fr auto;
-  grid-template-rows: auto auto;
-}
-
-body > header h1 {
-  grid-column: 1;
-  grid-row: 1;
-}
-
-body > header h2 {
-  grid-column: 1;
-  grid-row: 2;
-}
-
-body > header #search {
-  grid-column: 2;
-  grid-row: 1;
-} 
-body > header #signup {
-  grid-column: 3;
-  grid-row: 1;
-}
 
 /* Profile Layout */
 #owner{
