--- a/css/layout.css
+++ b/css/layout.css
@@ -3,13 +3,10 @@ body {
   background-color: #edeff0;
   margin: 0 auto;
   width: 100%;
+  min-height: 100%;
   display: grid;
   grid-template-columns: [start] 4fr [middle] 1fr [end];
   grid-template-rows: [start] auto [nav] auto [news] 1fr [footer] auto [end];
-}
-
-body::-webkit-scrollbar-track{
-  background: black;
 }
 
 body > header {
@@ -86,8 +83,5 @@ body > header {
 }
 
 footer{
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
+  grid-column: start/end;
 }
