--- a/css/login_register.css
+++ b/css/login_register.css
@@ -7,6 +7,8 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+    width: 100%;
+    height: 100%;
 }
 
 
