--- a/css/header.css
+++ b/css/header.css
@@ -4,7 +4,6 @@ header{
   flex-direction: row;
   font-family: Arial, Helvetica, sans-serif;
   padding: 1em;
-  width: 100%;
 }
 
 header a{
@@ -49,14 +48,14 @@ header #dropdown{
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  min-width: 10em;
+  box-shadow: 0px 1em 2em 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
 header #dropdown a {
   color: black;
-  padding: 12px 16px;
+  padding: 1.5em 2em;
   text-decoration: none;
   display: block;
   text-align: left;
