--- a/css/profile.css
+++ b/css/profile.css
@@ -2,12 +2,12 @@
     font-family: Arial, Helvetica, sans-serif;
 }
   
-.infoGrid #information{
+.infoGrid #information_person{
   border-style: solid;
   border-width: 2px;
 }
 
-.infoGrid #information p{
+.infoGrid #information_person p{
   border-bottom: solid;
   padding-bottom: 5px;
   border-width: 1px;
