--- a/css/updateUser.css
+++ b/css/updateUser.css
@@ -1,4 +1,5 @@
 #update{
+    grid-column: start/end;
     font-family: Arial, Helvetica, sans-serif;
     column-gap: 2em;
     position: absolute;
