--- a/css/header.css
+++ b/css/header.css
@@ -27,16 +27,25 @@ header #name_slogan{
 
 header #rightside{
   margin-left: auto;
+  margin-right: 5em;
+}
+
+header #search, header #rightside #settings{
+  margin-right: 3em;
+  padding-top: 1em;
 }
 
 header #search{
-  margin-right: 3em;
+  margin-left: 3em;
 }
 
-header #settings{
-  margin-left: auto;
-  margin-right: 3em;
-  padding-top: 1em;
+#search #advanced-search a{
+  font-size: small;
+}
+
+#search input[type="text"]{
+  width: 20em;
+  padding: 0.2em;
 }
 
 header #signedin{
