--- a/css/layout.css
+++ b/css/layout.css
@@ -1,26 +1,22 @@
+html{
+  height: 100%;
+  width: 100%;
+}
+
 body {
   margin: 0 auto;
   width: 100%;
-  min-height: 100%;
-  display: grid;
-  grid-template-columns: [start] auto [middle]auto[end];
-  
+  height: 100%;
+  display: flex;
+  flex-direction: column; 
 }
 
 body > header {
-  grid-column: start / end;
+  height: 3.5em;
 }
 
-/* Profile Layout */
-#owner{
-  grid-column: start/end;
-}
 .header{
   position: absolute;
-}
-
-.image{
-  padding-top:6em;
 }
 
 .image img{
@@ -82,12 +78,4 @@ body > header {
   grid-row-start: 1;
   grid-row-end: 3;
   padding: 1em;
-}
-
-#dog{
-  grid-column: start/end;
-}
-
-footer{
-  grid-column: start/end;
 }
