--- a/css/footer.css
+++ b/css/footer.css
@@ -2,14 +2,14 @@
 footer{
     font-family: Arial, Helvetica, sans-serif;
     bottom: 0;
-    position: fixed;
     text-align: center;
     padding: 0.5em;
-    width: 100%;
     color: white;
     background-color: black;
     transition: 0.3s;
     opacity: 0.5;
+    height: 1.5em;
+
 }
 
 footer:hover{
