--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,7 +1,9 @@
 #homepage{
     font-family: Arial, Helvetica, sans-serif;
     padding-bottom: 3em;
-    grid-column: start/end;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 #intro{
