--- a/css/updateUser.css
+++ b/css/updateUser.css
@@ -1,7 +1,8 @@
 #update{
     font-family: Arial, Helvetica, sans-serif;
     height: 100%;
-    width: 100%;      overflow: hidden;
+    width: 100%;      
+    overflow: hidden;
     display: flex;
     flex-direction: row;
     justify-content: center; /*centers items on the line (the x-axis by default)*/
