--- a/css/layout.css
+++ b/css/layout.css
@@ -9,6 +9,7 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column; 
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 body > header {
