--- a/css/updatePet.css
+++ b/css/updatePet.css
@@ -1,8 +1,7 @@
 #pet-update{
     font-family: Arial, Helvetica, sans-serif;
-    padding-bottom: 3em;
     height: 100%;
-    width: 100%;
+    width: 100%;      
 }
 
 #pet-update .goback{
@@ -19,11 +18,13 @@
 }
 
 #pet-update #updatecontainers{
-    display: flex;    
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    justify-content: center; /*centers items on the line (the x-axis by default)*/
+    align-items: center; /*centers items on the cross-axis (y by default)*/ 
     column-gap: 2em;
-    top: 20%;
-    left: 21.5%;    
-    position: absolute;
+    padding: 1em;
 }
 
 #pet-update input, 
@@ -58,11 +59,19 @@
 }
 
 #pet-update #updatecontainers .updatepetinfo,
-#pet-update #updatecontainers .updateposts{
-    border: 0.5px solid black;
-    padding: 1em;
-    width: 500px;
+#pet-update #updatecontainers .updateposts,
+#pet-update #updatecontainers .add-photo{    
+    height: 40em;
+    width: 30em;
+    padding: 2em;
+    text-align: center;
+    border-radius: 10px;
+    box-sizing: border-box;
+    box-shadow:	0 0.125rem 0.5rem rgba(0, 0, 0, .3), 0 0.0625rem 0.125rem rgba(0, 0, 0, .2);
+    display: flex;
+    flex-direction: column;
 }
+
 #pet-update #updatecontainers .updateposts #buttonsposts{
     display: flex;
 }
