--- a/css/layout.css
+++ b/css/layout.css
@@ -57,7 +57,7 @@ body > header {
   padding: 2em;
 }
 
-.infoGrid #petsForAdoption, #posts{
+.infoGrid #petsForAdoption, .infoGrid #posts{
   text-align: left;
   grid-column: 2;
   grid-row-start: 1;
