--- a/css/profile.css
+++ b/css/profile.css
@@ -4,6 +4,16 @@
     width: 100%;
 }
 
+
+#owner a{
+  color: black;
+  text-decoration: none;
+}
+
+#owner:visited{
+  color: black;
+}
+
 #owner .image{
   padding-top: 6em;
 }
