--- a/css/login_register.css
+++ b/css/login_register.css
@@ -1,18 +1,24 @@
-body{
+body, html{
     margin: 0 auto;
-    min-height: 100%;
+    height: 100%;
     width: 100%;
-}
-
-.hero-image {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
-    width: 100%;
-    height: 100%;
+    background-image: url("../images/family-dog.jpeg");
+    font-family: Arial, Helvetica, sans-serif;
 }
 
+.login{
+    height: 96%;
+    width: 100%;
+}
+
+#register{
+    
+    height: 96%;
+    width: 100%;
+}
 
 .name_slogan{
     text-align: center;
@@ -56,9 +62,10 @@ body{
     -moz-transform: scale(1.5);
     text-align: center;
     position: absolute;
-    top: 25%;
+    top: 20%;
     left: 10%;
     padding: 3em;
+    width: 20em;
 
     display: grid;
     grid-template-columns: 1fr;
@@ -66,7 +73,7 @@ body{
     background-color:rgba(256, 256, 256, 0.6);
 }
 
-input{
+input, button{
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -78,7 +85,7 @@ input[type=text], input[type=password]{
     border: 1px solid #ccc;
 }
 
-input[type=submit]{
+input[type=submit], button{
     border: 1px solid #008080;
     background-color: #008080;
     color: white;
@@ -86,7 +93,7 @@ input[type=submit]{
     cursor: pointer;
 }
 
-input[type=submit]:hover{
+input[type=submit]:hover, button:hover{
     border: 1px solid #004646;
     background-color: #004646;
 }
@@ -97,4 +104,14 @@ input[type=submit]:hover{
 
 .submit_register{
     padding-top: 0.5em;
+}
+
+.gender{
+    display: flex;
+    flex-direction: column;
+}
+
+.genderoptions{
+    display: flex;
+    flex-direction: row;
 }
