--- a/css/newPet.css
+++ b/css/newPet.css
@@ -1,14 +1,8 @@
-#add{
-    font-family: Arial, Helvetica, sans-serif;
-    height: 100%;
-    width: 100%;      
+#add{    
     overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    justify-content: center; /*centers items on the line (the x-axis by default)*/
-    align-items: center; /*centers items on the cross-axis (y by default)*/ 
+    justify-content: center;
+    align-items: center;
 }
-
 
 #add a{
     color: black;
