--- a/css/petInformation.css
+++ b/css/petInformation.css
@@ -1,11 +1,3 @@
-#petInformation{
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    margin: 1em;
-    gap: 1em;
-}
-
 #petInformation a{
     color: black;
     text-decoration: none;
@@ -16,6 +8,7 @@
 }
 
 #petInformation #informationSidebar{
+    padding-top: 1em;
     flex: 1;
     text-align: center;
 }
