--- a/css/petProfile.css
+++ b/css/petProfile.css
@@ -1,76 +1,84 @@
-#dog{
-    height: 100%;
+#pet .image img{
+    position: relative;
+    border-radius: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-#dog a{
+#pet .name{
+    text-align: center;
+}
+
+#pet a{
     color: black;
     text-decoration: none;
 }
 
-#dog a:visited{
+#pet a:visited{
     color: black;
 }
 
-#dog .image{
+#pet .image{
     padding-top: 6em;
   }
 
-#dog .infoGrid #information_pet,
-#dog .infoGrid #proposals, 
-#dog .infoGrid  #posts, 
-#dog .infoGrid  #question{
+#pet .infoGrid #information_pet,
+#pet .infoGrid #proposals, 
+#pet .infoGrid  #posts, 
+#pet .infoGrid  #question{
     border-radius: 10px;
     box-sizing: border-box;
     box-shadow:	0 0.125rem 0.5rem rgba(0, 0, 0, .3), 0 0.0625rem 0.125rem rgba(0, 0, 0, .2);
 }
   
-#dog .infoGrid #information_pet #information_and_update, .infoGrid #proposals #uniqueproposal{
+#pet .infoGrid #information_pet #information_and_update, .infoGrid #proposals #uniqueproposal{
     display: flex;
     align-items: center;
     justify-content: left;
 }
 
-#dog .infoGrid #information_pet #information_and_update #moreinfo{
+#pet .infoGrid #information_pet #information_and_update #moreinfo{
   margin-left: auto;
 }
   
-#dog .infoGrid #information_pet p{
+#pet .infoGrid #information_pet p{
     border-bottom: solid;
     padding-bottom: 5px;
     border-width: 1px;
 }
 
-#dog .name_and_favorite{
+#pet .name_and_favorite{
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-#dog button[type=submit]{
+#pet button[type=submit]{
     cursor: pointer;
     background-color: white;
     border: none;
     outline: none;
     font-size: large;
 }
-#dog .name_and_favorite button[type=submit]{
+#pet .name_and_favorite button[type=submit]{
     color: orange;
 }
-#dog button[type=submit]:hover{
+#pet button[type=submit]:hover{
     cursor: pointer;
 }
 
-#dog .infoGrid #proposals #uniqueproposal button[type=submit]{
+#pet .infoGrid #proposals #uniqueproposal button[type=submit]{
     color: green;
 }
 
-#dog .infoGrid #proposals #adoption-propose{
+#pet .infoGrid #proposals #adoption-propose{
     padding-top: 1em;
     display: flex;
     justify-content: center;
 }
 
-#dog .infoGrid #proposals #adoption-propose input[type=submit]{
+#pet .infoGrid #proposals #adoption-propose input[type=submit]{
     border: 1px solid #008080;
     background-color: #008080;
     color: white;
@@ -79,25 +87,25 @@
     padding: 1em;
 }
 
-#dog .infoGrid #proposals #adoption-propose input[type=submit]:hover{
+#pet .infoGrid #proposals #adoption-propose input[type=submit]:hover{
     border: 1px solid #004646;
     background-color: #004646;
 }
 
-#dog .infoGrid #question, #dog .infoGrid #posts{
+#pet .infoGrid #question, #pet .infoGrid #posts{
     display: flex;
     flex-direction: column;
     max-width: 31em;
 }
 
-#dog .infoGrid #question .questionform, #dog .infoGrid #posts .postsform{
+#pet .infoGrid #question .questionform, #pet .infoGrid #posts .postsform{
     padding-top: 1em;  
     display: flex;
     flex-direction: column;
 }
 
-#dog .infoGrid #question input[type=submit], 
-#dog .infoGrid #posts input[type=submit]{
+#pet .infoGrid #question input[type=submit], 
+#pet .infoGrid #posts input[type=submit]{
     margin-top: 1em;
     margin-left: auto;
     border: 1px solid #008080;
@@ -108,14 +116,14 @@
     padding: 1em;
 }
 
-#dog .infoGrid #question input[type=submit]:hover,
-#dog .infoGrid #posts input[type=submit]:hover{
+#pet .infoGrid #question input[type=submit]:hover,
+#pet .infoGrid #posts input[type=submit]:hover{
     border: 1px solid #004646;
     background-color: #004646;
 }
 
-#dog .infoGrid #question input[type=text], 
-#dog .infoGrid #question #uniquequestion p{
+#pet .infoGrid #question input[type=text], 
+#pet .infoGrid #question #uniquequestion p{
     position: relative;
     border: none;
 	background-color: rgb(197, 235, 223);
@@ -125,8 +133,8 @@
     box-shadow:	0 0.125rem 0.5rem rgba(0, 0, 0, .3), 0 0.0625rem 0.125rem rgba(0, 0, 0, .2);
 }
  
-#dog .infoGrid #question input[type=text]::before,
-#dog .infoGrid #question #uniquequestion p::before{
+#pet .infoGrid #question input[type=text]::before,
+#pet .infoGrid #question #uniquequestion p::before{
 	content: '';
 	position: absolute;
 	width: 0;
@@ -139,8 +147,8 @@
     box-shadow:	rgba(0, 0, 0, .3);
 }
 
-#dog .infoGrid #posts input[type=text],
-#dog .infoGrid #posts #uniquepost p {
+#pet .infoGrid #posts input[type=text],
+#pet .infoGrid #posts #uniquepost p {
     position: relative;
     border: none;
 	background-color: rgb(182, 236, 240);
@@ -150,8 +158,8 @@
     box-shadow:	0 0.125rem 0.5rem rgba(0, 0, 0, .3), 0 0.0625rem 0.125rem rgba(0, 0, 0, .2);
 }
 
-#dog .infoGrid #posts input[type=text]::before,
-#dog .infoGrid #posts #uniquepost p::before {
+#pet .infoGrid #posts input[type=text]::before,
+#pet .infoGrid #posts #uniquepost p::before {
 	content: '';
 	position: absolute;
 	width: 0;
