--- a/css/layout.css
+++ b/css/layout.css
@@ -97,5 +97,5 @@ body {
 #displayPets{
   padding-top: 2em;
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 33% 33% 33%;
 }
