--- a/css/login_register.css
+++ b/css/login_register.css
@@ -45,8 +45,8 @@ body, html{
 .container_forms{
     text-align: center;
     position: absolute;
-    top: 20%;
-    left: 10%;
+    top: 10em;
+    left: 10em;
     padding: 3em;
     width: 20em;
 
