--- a/css/layout.css
+++ b/css/layout.css
@@ -13,6 +13,13 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+/* ---------- HEADER LAYOUT ---------- */
+
+header{
+  display: flex;
+  flex-direction: row;
+}
+
 /* ---------- PAGES LAYOUT ----------  */
 
 #pet,
@@ -41,6 +48,14 @@ body {
 #advanced_search_page{
   display: flex;
   flex-direction: column;
+}
+
+/* ---------- HOMEPAGE LAYOUT ---------- */
+
+#dogs_information{
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  text-align: center;
 }
 
 /* ---------- PROFILES LAYOUT ---------- */
