--- a/css/layout.css
+++ b/css/layout.css
@@ -77,6 +77,24 @@ header{
   text-align: center;
 }
 
+@media screen and (max-width: 1250px){
+  #dogs_information{
+    grid-template-columns: 33% 33% 33%;
+  }
+}
+
+@media screen and (max-width: 980px){
+  #dogs_information{
+    grid-template-columns: 50% 50%;
+  }
+}
+
+@media screen and (max-width: 650px){
+  #dogs_information{
+    grid-template-columns: 100%;
+  }
+}
+
 /* ---------- ADVANCED SEARCH LAYOUT ---------- */
 
 #displayPets{
