responsive advanced search

--- a/css/containers.css
+++ b/css/containers.css
@@ -15,7 +15,7 @@
 #posts, 
 #question,
 #advanced_search,
-#displayPets #profile,
+#displayPets .profile,
 #update #updatecontainers .updatepetinfo,
 #update #updatecontainers .updateposts,
 #update #updatecontainers .add-photo,
