--- a/css/layout.css
+++ b/css/layout.css
@@ -122,11 +122,18 @@ header{
 
 /* ---------- PROFILES LAYOUT ---------- */
 
+#information{
+  display: flex;
+  justify-content: center;
+}
+
 .infoGrid{
+  width: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: auto auto auto;
   grid-template-rows: auto auto auto;
   grid-gap: 2em;
+  column-width: 10em;
 }
 
 #owner .infoGrid #information_person{
@@ -137,6 +144,7 @@ header{
 }
 
 #pet .infoGrid #information_pet{
+  grid-column: 1;
   grid-row-start: 1;
   grid-row-end: 3;  
   text-align: left;
@@ -167,6 +175,13 @@ header{
   grid-row-start: 1;
   grid-row-end: 3;
   padding: 2em;
+}
+
+@media screen and (max-width: 1200px){
+  .infoGrid{
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 /* ---------- ADD NEW PET LAYOUT ---------- */
